--- a/dbo/templates/base.html
+++ b/dbo/templates/base.html
@@ -204,8 +204,8 @@
                     <li>
                         <a href="{% if 'operator1' in user.username %}{% url 'operator1_dashboard' %}{% elif 'operator2' in user.username %}{% url 'operator2_dashboard' %}{% elif 'client' in user.username %}{% url 'client_dashboard' %}{% else %}/client/{% endif %}">👤 Личный кабинет</a>
                     </li>
-                    <li><a href="{% url 'my_services' %}">📋 Мои услуги</a></li>
                     {% if 'client' in user.username %}
+                    <li><a href="{% url 'my_services' %}">📋 Мои услуги</a></li>
                     <li><a href="{% url 'create_service_request' %}">📝 Создать заявку на услугу</a></li>
                     {% endif %}
                     {% endif %}
@@ -217,8 +217,8 @@
                     <li><a href="{% url 'cards' %}">💳 Карты</a></li>
                     {% if request.user.is_authenticated and 'client' in user.username %}
                     <li><a href="{% url 'transfers' %}">🔁 Переводы</a></li>
+                    <li><a href="{% url 'my_requests' %}">📄 Мои заявки</a></li>
                     {% endif %}
-                    <li><a href="{% url 'services_management' %}">⚙️ Управление услугами</a></li>
                     
                 </ul>
             </div>
@@ -256,7 +256,7 @@
                     </svg>
                     Банковские услуги
                 </a></li>
-                {% if request.user.is_authenticated %}
+                {% if request.user.is_authenticated and 'client' in user.username %}
                 <li><a href="{% url 'my_services' %}" class="btn btn-ghost">
                     <svg class="w-4 h-4 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path>
@@ -307,7 +307,7 @@
                             {% if 'client' in user.username %}
                                 <li><a href="{% url 'create_service_request' %}">📝 Создать заявку на услугу</a></li>
                                 <li><a href="{% url 'my_services' %}">📋 Мои услуги</a></li>
-                                <li><a href="{% url 'services_management' %}">⚙️ Управление услугами</a></li>
+                                <li><a href="{% url 'my_requests' %}">📄 Мои заявки</a></li>
                                 <li class="menu-title"><span class="opacity-60">Банковские продукты</span></li>
                                 <li><a href="{% url 'deposits' %}">💰 Депозиты</a></li>
                                 <li><a href="{% url 'investments' %}">📈 Инвестиции</a></li>
